[package]
name = "leptos_go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.31"
leptos = { version = "0.4.3", features = ["csr", "nightly"] }
leptos_meta = { version = "0.4.3", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.3", features = ["csr", "nightly"] }

[package.metadata.leptos]
style-file = "style.css"
